agregando sass en cada sección

--- a/index.html
+++ b/index.html
@@ -9,32 +9,41 @@
     <meta name="keywords"  content="Drone, Fotografía aérea, Video aéreo, Edición de video, General Roca">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,200&display=swap" rel="stylesheet">
-    <link rel="preload" href="./style.css" as="style">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="preload" href="./css/main.css" as="style">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    <header class="header__general--index">
-        <div >
-            <img src="./assets/images/logo2.png" alt="logo">
-            <h1>Sebastián Pedranti<span>Drone Pilot</span></h1>
+    <header class="container__header">
+        <div class="container__header--index">
+            <img class="container_header--img" src="./assets/images/logo2.png" alt="logo">
+            <h1 class="container__header--título" >Sebastián Pedranti<span class="container__header--título--span" >Drone Pilot</span></h1clas>
         </div>
-        <section>
-            <div>
-                <ul>
-                    <li><a href="./index.html">Inicio</a></li>
-                    <li><a href="./assets/pages/sobremi.html">Sobre Mí</a></li>
-                    <li><a href="./assets/pages/servicios.html">Servicios</a></li>
-                    <li><a href="./assets/pages/portfolio.html">Portfolio</a></li>
-                    <li><a href="./assets/pages/contacto.html">Contacto</a></li>
-                </ul> 
-            </div>                                    
-        </section>          
+        <div class="navbar" >
+            <ul class="menu">
+                <li class="menu__item">
+                    <a class="menu__link" href="/index.html">Inicio</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="./assets/pages/sobremi.html">Sobre Mí</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="./assets/pages/servicios.html">Servicios</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="./assets/pages/portfolio.html">Portfolio</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="./assets/pages/contacto.html">Contacto</a>
+                </li>
+            </ul> 
+        </div>                                             
     </header>
     <div>
         <picture>
             <img src="./assets/images/droneinicio.png" alt="dron de inicio" width="100%" >
         </picture>                                                                                
-    </div>    
+    </div>  
+      
     <footer>
         <section>
             <ul>
