--- a/assets/pages/sobremi.html
+++ b/assets/pages/sobremi.html
@@ -9,33 +9,41 @@
     <meta name="keywords"  content="Breve descripción de mi como persona y Drone Pilot">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,200&display=swap" rel="stylesheet">
-    <link rel="preload" href="../../section.css" as="style">
-    <link rel="stylesheet" href="../../section.css">
+    <link rel="preload" href="../../css/main.css" as="style">
+    <link rel="stylesheet" href="../../css/main.css">
 </head>
 <body>
-    <header class="header__general--secciones">
-        <div class="título__encabezado">
-            <h1>Sebastián Pedranti <span>Drone Pilot</span></h1>
+    <header class="container__header">
+        <div class="container__header--secciones">
+            <h1 class="container__header--título">Sebastián Pedranti<span class="container__header--título--span" >Drone Pilot</span></h1clas>
         </div>
-        <section class="container__navbar">
-            <div class="navbar">
-                <ul class="navbar__general">
-                    <li class="navbar__general__items"><a class="navbar__general__items__link" href="../../index.html">Inicio</a></li>
-                    <li class="navbar__general__items"><a class="navbar__general__items__link" href="../../assets/pages/sobremi.html">Sobre Mí</a></li>
-                    <li class="navbar__general__items"><a class="navbar__general__items__link" href="../../assets/pages/servicios.html">Servicios</a></li>
-                    <li class="navbar__general__items"><a class="navbar__general__items__link" href="../../assets/pages/portfolio.html">Portfolio</a></li>
-                    <li class="navbar__general__items"><a class="navbar__general__items__link" href="../../assets/pages/contacto.html">Contacto</a></li>
-                </ul>  
-            </div>                                    
-        </section>          
+        <div class="navbar" >
+            <ul class="menu">
+                <li class="menu__item">
+                    <a class="menu__link" href="../../index.html">Inicio</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="../pages/sobremi.html">Sobre Mí</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="../pages/servicios.html">Servicios</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="../pages/portfolio.html">Portfolio</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="../pages/contacto.html">Contacto</a>
+                </li>
+            </ul> 
+        </div>                                             
     </header>
-    <main>
-        <div class="container__sección--sobremí">
+
+    <div class="container__secciones">
             <h2 class="título__sección">Sobre Mí</h2>
-            <p class="título__sección__sobremí">Lorem ipsum ue eligendi nisi tempore. Dignissimos nesciunt ut reprehenderit voluptatum saepe alias eusci libero ratione.</p>
+            <p class="título__sección__descrip">Lorem ipsum ue eligendi nisi tempore. Dignissimos nesciunt ut reprehenderit voluptatum saepe alias eusci libero ratione.</p>
         </div>  
         <picture>
-            <img src="../images/sebaseccionsobremi.jpg" alt="sebaseccionsobremi" width="1200px">
+            <img class="img__sobremí" src="../images/sebaseccionsobremi.jpg" alt="sebaseccionsobremi" width="1200px">
         </picture> 
     </main>    
     <footer class="container__footer">
