--- a/assets/pages/contacto.html
+++ b/assets/pages/contacto.html
@@ -8,84 +8,91 @@
     <meta name="description" content="Contáctame en mis redes sociales o por whatsapp">
     <meta name="keywords"  content="Contacto, Celular, whatsapp, Facebook, instagram, youtube">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,200&display=swap" rel="stylesheet">
-    <link rel="preload" href="../../section.css" as="style">
-    <link rel="stylesheet" href="../../section.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+    <link rel="preload" href="../../css/main.css" as="style">
+    <link rel="stylesheet" href="../../css/main.css">
 </head>
 <body>
-    <div class="contenedor-sobremi container">
-        <header class="header container">
-            <div class="logo">
-                <h1>Sebastián Pedranti <span>Drone Pilot</span></h1>
-            </div>
-            <section class="navbar flex-wrap">
-                <div class="barra-navegación">
-                        <ul class="menu flex-row container flex-wrap">
-                            <li class="menu-item"><a class="item" href="../../index.html">Inicio</a></li>
-                            <li class="menu-item"><a class="item" href="../../assets/pages/sobremi.html">Sobre Mí</a></li>
-                            <li class="menu-item"><a class="item" href="../../assets/pages/servicios.html">Servicios</a></li>
-                            <li class="menu-item"><a class="item" href="../../assets/pages/portfolio.html">Portfolio</a></li>
-                            <li class="menu-item"><a class="item" href="../../assets/pages/contacto.html">Contacto</a></li>
-                        </ul>  
-                </div>                                    
-            </section>          
-        </header>
-        <main class="section-sobremi container boxsobremi">
-            <div class="sobre-mi">
-                <h2 class="tit-seccion flex-wrap">Contacto</h2>
-                <p class="flex-wrap">Lorem ipsum ue eligendi nisi tempore. Dignissimos nesciunt ut reprehenderit voluptatum saepe>
-            </div>            
-        </main>
+    <header class="container__header container flex-wrap">
+        <div class="container__header--secciones">
+            <h1 class="container__header--título">Sebastián Pedranti<span class="container__header--título--span" >Drone Pilot</span></h1clas>
+        </div>
+        <div class="navbar" >
+            <ul class="menu">
+                <li class="menu__item">
+                    <a class="menu__link" href="../../index.html">Inicio</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="../pages/sobremi.html">Sobre Mí</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="../pages/servicios.html">Servicios</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="../pages/portfolio.html">Portfolio</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="../pages/contacto.html">Contacto</a>
+                </li>
+            </ul> 
+        </div>                                             
+    </header>
+
+    <div class="container__secciones container flex-wrap">
+        <h2 class="título__sección">Contáctame</h2>
+        <p class="título__sección__descrip">Completá todos los campos y en breve me pondré en contacto contigo!</p>
+    </div>   
+
+    <form class="container__form">       
+        <div class="item__form">
+            <label class='item__form--label' for="nombre" class="colocar_nombre">Nombre</label>
+            <input class='item__form--input' type="text" name="introducir_nombre" id="nombre" required="obligatorio" placeholder="Escribe tu nombre">
+        </div>
+        <div class="item__form">
+            <label class='item__form--label' for="email" class="colocar_email">Email</label>
+            <input class='item__form--input' type="email" name="introducir_email" id="email" required="obligatorio" placeholder="Escribe tu Email">
+        </div>            
+        <div class="item__form">
+            <label class='item__form--label' for="telefone" class="colocar_telefono">Teléfono</label>
+            <input class='item__form--input' type="tel" name="introducir_telefono" id="telefono" placeholder="Escribe tu teléfono">
+        </div>   
+        <div class="item__form">
+            <label class='item__form--label' for="mensaje" class="colocar_mensaje">Mensaje</label>                     
+            <textarea class='item__form--textarea' name="introducir_mensaje" class="texto_mensaje" id="mensaje" required="obligatorio" placeholder="Deja aquí tu comentario..."></textarea> 
+        </div>                    
+        <button type="submit" name="" id="enviar"><p>Clic</p></button>
+        </form>
+        </div>  
     </div>
-    <form class="form container">
-        <label class="item-form" for="username">Nombre</label>
-        <input type="text" name="username" placeholder="Tu nombre">
-        <br>
-        <label class="item-form" for="email">Email</label>
-        <input type="email" name="tu email" placeholder="Tu email">
-        <br>
-        <label class="item-form" for="consultas">¿Qué necesitas?</label>
-        <select name="Cotización">
-            <option value="Cotización">Cotización</option>
-            <option value="Consultar sobre un proyecto">Consultar proyecto</option>
-            <option value="Otro">Otro</option>
-        </select>
-        <br>
-        <label class="item-form" for="message">Mensaje</label>
-        <textarea name="message" cols="30" rows="10" placeholder="Deja tu mensaje"></textarea>
-        <br>
-        <input type="submit" value="Enviar">
-        <input type="reset" value="Limpiar formulario">
-    </form>    
-    <footer class="container__footer">
-        <section class="contenido__footer">
-            <ul class="contenido__footer--lista">
-                <li class="contenido__footer__datos"><span class="">Cel:</span> 2984xxxxxx</li>
-                <li class="contenido__footer__datos"><span class="">Email:</span> sebxxxxx@gmail.com</li>
-                <li class="contenido__footer__datos"><span class="">General Roca, Rio Negro</span></li>
+
+    <footer class="container__footer container">
+        <section class="contenido__footer container flex-wrap">
+            <ul class="contenido__footer--lista container flex-wrap">
+                <li class="datos"><span class="span__foot">Cel:</span> 2984xxxxxx</li>
+                <li class="datos"><span class="span__foot">Email:</span> sebxxxxx@gmail.com</li>
+                <li class="datos"><span class="span__foot">General Roca, Rio Negro</span></li>
             </ul>
-            <div class="contenido__footer--iconosredes">
-                <a href="https://www.facebook.com/sebastian.pedranti" target="_blank"><svg
-                        xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" width="64"
-                        height="64" viewBox="0 0 24 24" stroke-width="2" stroke="#000000" fill="none" stroke-linecap="round"
-                        stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                        <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" /></svg></a>
-                <a href="https://www.instagram.com/dronesp2021" target="_blank"><svg
-                        xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="64"
-                        height="64" viewBox="0 0 24 24" stroke-width="2" stroke="#000000" fill="none" stroke-linecap="round"
-                        stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                        <rect x="4" y="4" width="16" height="16" rx="4" />
-                        <circle cx="12" cy="12" r="3" />
-                        <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" /></svg></a>
-                <a href="https://www.youtube.com/channel/UCnB8bhVRKFxAGZMEIa0gVhw"
-                    target="_blank"><svg class="link" xmlns="http://www.w3.org/2000/svg"
-                        class="icon icon-tabler icon-tabler-brand-youtube" width="64" height="64" viewBox="0 0 24 24"
-                        stroke-width="2" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                        <rect x="3" y="5" width="18" height="14" rx="4" />
-                        <path d="M10 9l5 3l-5 3z" /></svg></a>
+            <div class="contenido__footer--iconosredes flex-wrap flex-row">
+                <a class="iconos" href="https://www.facebook.com/sebastian.pedranti" target="_blank"><svg  class="iconos__link" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" width="60" height="60" viewBox="0 0 24 24" stroke-width="2" stroke="#971717" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
+                  </svg>
+                </a>
+                <a class="iconos" href="https://www.instagram.com/dronesp2021" target="_blank"><svg class="iconos__link" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="60" height="60" viewBox="0 0 24 24" stroke-width="2" stroke="#971717" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <rect x="4" y="4" width="16" height="16" rx="4" />
+                    <circle cx="12" cy="12" r="3" />
+                    <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
+                    </svg>
+                </a>
+                <a class="iconos" href="https://www.youtube.com/channel/UCnB8bhVRKFxAGZMEIa0gVhw"target="_blank"><svg class="iconos__link" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-youtube" width="60" height="60" viewBox="0 0 24 24" stroke-width="2" stroke="#971717" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <rect x="3" y="5" width="18" height="14" rx="4" />
+                    <path d="M10 9l5 3l-5 3z" />
+                    </svg>
+                </a>
             </div>
         </section>
     </footer>
