modificación de secciones

--- a/assets/pages/contacto.html
+++ b/assets/pages/contacto.html
@@ -40,9 +40,9 @@
         </div>                                             
     </header>
 
-    <div class="container__secciones container flex-wrap">
+    <div class="container__secciones container">
         <h2 class="título__sección">Contáctame</h2>
-        <p class="título__sección__descrip">Completá todos los campos y en breve me pondré en contacto contigo!</p>
+        <p class="título__sección--descrip">Completá todos los campos y en breve me pondré en contacto contigo!</p>
     </div>   
 
     <form class="container__form">       
@@ -70,8 +70,8 @@
     <footer class="container__footer container">
         <section class="contenido__footer container flex-wrap">
             <ul class="contenido__footer--lista container flex-wrap">
-                <li class="datos"><span class="span__foot">Cel:</span> 2984xxxxxx</li>
-                <li class="datos"><span class="span__foot">Email:</span> sebxxxxx@gmail.com</li>
+                <li class="datos"><span class="span__foot">+54 9 2984934266</li>
+                <li class="datos"><span class="span__foot">sebapedranti@gmail.com</li>
                 <li class="datos"><span class="span__foot">General Roca, Rio Negro</span></li>
             </ul>
             <div class="contenido__footer--iconosredes flex-wrap flex-row">
@@ -95,7 +95,8 @@
                 </a>
             </div>
         </section>
-    </footer>
+    </footer>    
+
 </body>
 </html>
 
