--- a/assets/pages/servicios.html
+++ b/assets/pages/servicios.html
@@ -41,9 +41,8 @@
 
     <div class="container__secciones container">
         <h2 class="título__sección">Servicios</h2>
-        <p class="título__sección__descrip">Te invito a que veas los servicios que ofrezco, no dudes en consultarme por tu proyecto!</p>
+        <p class="título__sección--descrip">A continuación se muestra una lista de los servicios que ofrezco. Contácteme si quiere saber más.</p>
     </div>      
-
 
     <div class="contenedor__servicios container flex-wrap"> 
         <div class="fotografía">
@@ -53,7 +52,7 @@
             <img class="img-sec img-fluid mi-clase" src="../images/puente.jpg" alt="puenteroca" width="100%" height="auto">
         </div>
         <div class="texto">
-            <p class="texto1 flex-wrap">Captá tus mejores momentos, tus mejores trabajos, tus mejores logros desde el aire. Inmortalizá ese momento especial con una buena imágen.</p>
+            <p class="texto1 flex-wrap">Captá tus mejores momentos, tus mejores trabajos, tus mejores logros desde el aire. Inmortalizá ese momento especial con una buena imágen desde otra perspectiva.</p>
         </div>
         <div class="video flex-wrap">
             <h2>Video</h2>
@@ -71,15 +70,15 @@
             <iframe class="video3 flex-wrap" width="100%" height="315" src="https://www.youtube.com/embed/rPuUZtiuw4E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="texto3 flex-wrap">
-            <p class="flex-wrap">Ya que me elegiste, puedo entregarte los videos en "crudo", o puedo ofrecerte el servicio de edición por un costo adicional. Podrás elegir la música y el tamaño del video para publicarlo en distintas redes sociales con la mejor calidad</p>
+            <p class="flex-wrap">Ya que llegaste hasta acá, te comento que puedo entregarte los videos en "crudo", o puedo ofrecerte el servicio de edición por un costo adicional. Podrás elegir la música y el tamaño del video para publicarlo en distintas redes sociales con la mejor calidad</p>
         </div>
     </div> 
 
     <footer class="container__footer container">
         <section class="contenido__footer container flex-wrap">
             <ul class="contenido__footer--lista container flex-wrap">
-                <li class="datos"><span class="span__foot">Cel:</span> 2984xxxxxx</li>
-                <li class="datos"><span class="span__foot">Email:</span> sebxxxxx@gmail.com</li>
+                <li class="datos"><span class="span__foot">+54 9 2984934266</li>
+                <li class="datos"><span class="span__foot">sebapedranti@gmail.com</li>
                 <li class="datos"><span class="span__foot">General Roca, Rio Negro</span></li>
             </ul>
             <div class="contenido__footer--iconosredes flex-wrap flex-row">
@@ -103,7 +102,7 @@
                 </a>
             </div>
         </section>
-    </footer>
+    </footer>    
 
 </body>
 </html>
