--- a/assets/pages/sobremi.html
+++ b/assets/pages/sobremi.html
@@ -15,9 +15,10 @@
     <link rel="stylesheet" href="../../css/main.css">
 </head>
 <body>
-    <header class="container__header">
+    <header class="container__header container">
         <div class="container__header--secciones container">
-            <h1 class="container__header--título">Sebastián Pedranti<span class="container__header--título--span" >Drone Pilot</span></h1clas>
+            <h1 class="container__header--título">Sebastián Pedranti
+                <span class="container__header--título--span">Drone Pilot</span></h1clas>
         </div>
         <div class="navbar" >
             <ul class="menu">
@@ -41,8 +42,9 @@
     </header>
 
     <div class="container__secciones container">
-        <h2 class="título__sección">Sobre Mí</h2>
-        <p class="título__sección__descrip">Hola! soy Seba, me gusta jugar al padel, al roller hockey y editar videos. Descubrí esta pasión gracias a un amigo que me prestó su drone aun sabiendo que jamás había volado uno (mucha confianza!) y lo compré inmediatamente. Empezó como hobbie pero es un estilo de vida.</p>
+        <h2 class="título__sección--sm">Sobre Mí</h2>
+        <p class="título__sección--descrip flex-row">Hola! soy Seba, y quiero contarte un poco sobre mí. Me gusta hacer deportes, andar en moto y editar videos. 
+            Descubrí esta pasión gracias a un amigo que me prestó su drone aun sabiendo que jamás había volado uno (mucha confianza!) y lo compré inmediatamente. Empezó como hobbie pero se convirtió en un estilo de vida.</p>
     </div>
     <div class="container">
         <picture class="foto__sección container">
@@ -53,8 +55,8 @@
     <footer class="container__footer container">
         <section class="contenido__footer container flex-wrap">
             <ul class="contenido__footer--lista container flex-wrap">
-                <li class="datos"><span class="span__foot">Cel:</span> 2984xxxxxx</li>
-                <li class="datos"><span class="span__foot">Email:</span> sebxxxxx@gmail.com</li>
+                <li class="datos"><span class="span__foot">+54 9 2984934266</li>
+                <li class="datos"><span class="span__foot">sebapedranti@gmail.com</li>
                 <li class="datos"><span class="span__foot">General Roca, Rio Negro</span></li>
             </ul>
             <div class="contenido__footer--iconosredes flex-wrap flex-row">
