--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 <body>
     <header class="container__header container">
         <div class="container__header--index container">
-            <img class="container_header--img" src="./assets/images/logo2.png" alt="logo" width="100px">
+            <picture class="container__header--img">
+                <img class="container_header--img" src="./assets/images/Diseño sin título.svg" alt="logo" width="100px">
+            </picture>
             <h1 class="container__header--título" >Sebastián Pedranti<span class="container__header--título--span" >Drone Pilot</span></h1clas>
         </div>
         <div class="navbar container" >
@@ -48,8 +50,8 @@
     <footer class="container__footer container">
         <section class="contenido__footer container flex-wrap">
             <ul class="contenido__footer--lista container flex-wrap">
-                <li class="datos"><span class="span__foot">Cel:</span> 2984xxxxxx</li>
-                <li class="datos"><span class="span__foot">Email:</span> sebxxxxx@gmail.com</li>
+                <li class="datos"><span class="span__foot">+54 9 2984934266</li>
+                <li class="datos"><span class="span__foot">sebapedranti@gmail.com</li>
                 <li class="datos"><span class="span__foot">General Roca, Rio Negro</span></li>
             </ul>
             <div class="contenido__footer--iconosredes flex-wrap flex-row">
@@ -73,7 +75,7 @@
                 </a>
             </div>
         </section>
-    </footer>
+    </footer>    
 
 </body>
 </html>
