--- a/assets/pages/portfolio.html
+++ b/assets/pages/portfolio.html
@@ -39,68 +39,76 @@
             </ul> 
         </div>                                             
     </header>
-    <div class="container__secciones">
+
+    <div class="container__secciones container">
         <h2 class="título__sección">Portfolio</h2>
-        <p class="título__sección__descrip">En esta sección te muestro algunos de mis trabajos realizados, acompañando proyectos desde el aire.</p>
+        <p class="título__sección--descrip">En esta galería puede ver una selección de mi trabajo. Espero que la disfrute.</p>
     </div>      
 
-    <div class="grids-portfolio container">
-        <div class="foto1">
-            <img src="../images/agregar fotos en porfolio.png" alt="" width="300px">
+    <div class="portfolio__container container">
+        <div class="galeía__item">
+            <img clas="galería__img" src="../images/agregar fotos en porfolio.png" alt="" width="300px">
+            <h3 class="galería__título"></h3>
         </div>
-        <div class="video1">
-            <video src="../videos/agregar videos a portfolio.mp4" controls width="300px"></video>
+        <div class="galería__item">
+            <video class="galería__video" src="../videos/agregar videos a portfolio.mp4" controls width="300px"></video>
+            <h3 class="galería__título"></h3>
         </div>
-        <div class="foto2">
-            <img src="../images/agregar fotos en porfolio.png" alt="" width="300px">
+        <div class="galería__item">
+            <img clas="galería__img" src="../images/agregar fotos en porfolio.png" alt="" width="300px">
+            <h3 class="galería__título"></h3>
         </div>
-        <div class="video2">
-            <video src="../videos/agregar videos a portfolio.mp4" controls width="300px"></video>
+        <div class="galería__item">
+            <video class="galería__video" src="../videos/agregar videos a portfolio.mp4" controls width="300px"></video>
+            <h3 class="galería__título"></h3>
         </div>
-        <div class="foto3">
-            <img src="../images/agregar fotos en porfolio.png" alt="" width="300px">
+        <div class="galería__item">
+            <img clas="galería__img" src="../images/agregar fotos en porfolio.png" alt="" width="300px">
+            <h3 class="galería__título"></h3>
         </div>
-        <div class="video3">
-            <video src="../videos/agregar videos a portfolio.mp4" controls width="300px"></video>
+        <div class="galería__item">
+            <video class="galería__video" src="../videos/agregar videos a portfolio.mp4" controls width="300px"></video>
+            <h3 class="galería__título"></h3>
         </div>
-        <div class="foto4">
-            <img src="../images/agregar fotos en porfolio.png" alt="" width="300px">
+        <div class="galería__item">
+            <img clas="galería__img" src="../images/agregar fotos en porfolio.png" alt="" width="300px">
+            <h3 class="galería__título"></h3>
         </div>
-        <div class="video4">
-            <video src="../videos/agregar videos a portfolio.mp4" controls width="300px"></video>
+        <div class="galería__item">
+            <video class="galería__video" src="../videos/agregar videos a portfolio.mp4" controls width="300px"></video>
+            <h3 class="galería__título"></h3>
         </div>
-        <div class="foto5">
-            <img src="../images/agregar fotos en porfolio.png" alt="" width="300px">
-        </div>                                                                      
+    </div>
+    
+    <footer class="container__footer container">
+        <section class="contenido__footer container flex-wrap">
+            <ul class="contenido__footer--lista container flex-wrap">
+                <li class="datos"><span class="span__foot">+54 9 2984934266</li>
+                <li class="datos"><span class="span__foot">sebapedranti@gmail.com</li>
+                <li class="datos"><span class="span__foot">General Roca, Rio Negro</span></li>
+            </ul>
+            <div class="contenido__footer--iconosredes flex-wrap flex-row">
+                <a class="iconos" href="https://www.facebook.com/sebastian.pedranti" target="_blank"><svg  class="iconos__link" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" width="60" height="60" viewBox="0 0 24 24" stroke-width="2" stroke="#971717" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
+                  </svg>
+                </a>
+                <a class="iconos" href="https://www.instagram.com/dronesp2021" target="_blank"><svg class="iconos__link" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="60" height="60" viewBox="0 0 24 24" stroke-width="2" stroke="#971717" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <rect x="4" y="4" width="16" height="16" rx="4" />
+                    <circle cx="12" cy="12" r="3" />
+                    <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
+                    </svg>
+                </a>
+                <a class="iconos" href="https://www.youtube.com/channel/UCnB8bhVRKFxAGZMEIa0gVhw"target="_blank"><svg class="iconos__link" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-youtube" width="60" height="60" viewBox="0 0 24 24" stroke-width="2" stroke="#971717" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <rect x="3" y="5" width="18" height="14" rx="4" />
+                    <path d="M10 9l5 3l-5 3z" />
+                    </svg>
+                </a>
+            </div>
+        </section>
+    </footer>    
 
-        <footer class="container__footer container">
-            <section class="contenido__footer container flex-wrap">
-                <ul class="contenido__footer--lista container flex-wrap">
-                    <li class="datos"><span class="span__foot">Cel:</span> 2984xxxxxx</li>
-                    <li class="datos"><span class="span__foot">Email:</span> sebxxxxx@gmail.com</li>
-                    <li class="datos"><span class="span__foot">General Roca, Rio Negro</span></li>
-                </ul>
-                <div class="contenido__footer--iconosredes flex-wrap flex-row">
-                    <a class="iconos" href="https://www.facebook.com/sebastian.pedranti" target="_blank"><svg  class="iconos__link" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" width="60" height="60" viewBox="0 0 24 24" stroke-width="2" stroke="#971717" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                        <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
-                      </svg>
-                    </a>
-                    <a class="iconos" href="https://www.instagram.com/dronesp2021" target="_blank"><svg class="iconos__link" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="60" height="60" viewBox="0 0 24 24" stroke-width="2" stroke="#971717" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                        <rect x="4" y="4" width="16" height="16" rx="4" />
-                        <circle cx="12" cy="12" r="3" />
-                        <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
-                        </svg>
-                    </a>
-                    <a class="iconos" href="https://www.youtube.com/channel/UCnB8bhVRKFxAGZMEIa0gVhw"target="_blank"><svg class="iconos__link" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-youtube" width="60" height="60" viewBox="0 0 24 24" stroke-width="2" stroke="#971717" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                        <rect x="3" y="5" width="18" height="14" rx="4" />
-                        <path d="M10 9l5 3l-5 3z" />
-                        </svg>
-                    </a>
-                </div>
-            </section>
-        </footer>    
 </body>
 </html>
